--- a/KaranSinMorsommeFerie/Uke_35/dyrenett/pinnsvin.html
+++ b/KaranSinMorsommeFerie/Uke_35/dyrenett/pinnsvin.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8"
   <title="Heftig pinnsvin"></tittle>
+  <style media="screen">
+    a{
+      list-style: none;
+    }
+  </style>
   </head>
   <body>
     <h1> Heftige pinnnsvin</h1>
@@ -23,3 +28,4 @@
 <a href="kanin.html"target="_blank"><img src="kaninbilde.jpg" width="150"  </a>
 </li>
 </ul></b>
+</body>
