--- a/KaranSinMorsommeFerie/Uke_36/register.html
+++ b/KaranSinMorsommeFerie/Uke_36/register.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>takk</title>
+<link rel="stylesheet" href="Øve_til_prøve/riktig/nav.css">
 </head>
+
 
 <body>
   <p> Takk for at du svarte!!</p>
