--- a/KaranSinMorsommeFerie/Uke_41/a.html
+++ b/KaranSinMorsommeFerie/Uke_41/a.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <h1 class="logo"></h1>
-  <img src="karanlogo.jpg" alt="logo" title="logo"width="300px">
+  <img src="karan.png" alt="logo" title="logo"width="300px">
 
           <nav>
             <ul>
