--- a/KaranSinMorsommeFerie/Uke_41/a.html
+++ b/KaranSinMorsommeFerie/Uke_41/a.html
@@ -22,6 +22,9 @@
           </nav>
         </div>
       </header>
-
+<main>
+  <br><br><br><br>
+<a id="ola" href="https://www.jpsrandhawa.com">Trykk her for å gå inn på en dårlig nettside</a>
+</main>
 </body>
 </html>
