--- a/KaranSinMorsommeFerie/Uke_42/index.html
+++ b/KaranSinMorsommeFerie/Uke_42/index.html
@@ -14,7 +14,7 @@
   <main>
     <br>
     <p>
-      <h1>oppgaver</h1>
+      <h1>OPPGAVER</h1>
 1.    <b>  Hva er internett, egentlig?</b> <br>
 Kort fortalt er internett en sammenkobling av datamaskiner i et nettverk som gjør det mulig at de ulike datamaskinene kommuniserer med hverandre.
  er datamaskiner koblet til en ledning i bakken. Denne ledningen er koblet til en ruter. Vi kobles til denne ruteren, enten trådløst eller med kabel. Det finnes flere billioner komponenter som er koblet til slike rutere rundt om i verden. For eksempel har jeg alene både en smarttelefon, en datamaskin og et nettbrett.
