--- a/KaranSinMorsommeFerie/Nettside/index.html
+++ b/KaranSinMorsommeFerie/Nettside/index.html
@@ -24,7 +24,7 @@
       </header>
 <main>
   <br><br><br><br>
-<a id="ola" href="https://www.jpsrandhawa.com">Trykk her for å gå inn på en dårlig nettside</a>
+<a id="ola" href="https://www.jpsrandhawa.com" target="_blank">Trykk her for å gå inn på en dårlig nettside</a>
 </main>
 </body>
 </html>
