--- a/KaranSinMorsommeFerie/Uke_44/nettavis/TVguide.html
+++ b/KaranSinMorsommeFerie/Uke_44/nettavis/TVguide.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="hoved.css">
+    <link rel="stylesheet" href="nr2.css">
   </head>
   <body>
     <header>
