--- a/KaranSinMorsommeFerie/Uke_44/nettavis/index.html
+++ b/KaranSinMorsommeFerie/Uke_44/nettavis/index.html
@@ -26,7 +26,7 @@
       <a href="#">POLITIKK</a>
     </section>
     <section class="lenke">
-      <a href="#">TV-GUIDE</a>
+      <a href="TVguide.html">TV-GUIDE</a>
     </section>
     <section>
        <input type="text" placeholder="Søk..">
@@ -41,20 +41,20 @@
     <section class="middelssak">
 
       <div class="bilde1">
-
+<img src="bilder/abc.png" alt="">
       </div>
-      <div class="tekst"><h3>bil vrooom vroom Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+      <div class="tekst"><h3>bil vrooom vroom  qui officia deserunt mollit anim id est laborum.</h3>
       </div>
     </section>
 
 
     <section class="litensak">
-
+<img src="bilder/b.jpg" alt="">
       <div class="bilde2">
 
       </div>
       <div class="tekst">litensak1
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Lorem ipsum dolor sit amet, consectetur adipisicingum.
         </div>
     </section>
 
@@ -62,9 +62,9 @@
     <section class="litensak">
 
       <div class="bilde3">
-
+<img src="bilder/bøø.jpg" alt="">
       </div>
-      <div class="tekst">litensak2     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <div class="tekst">litensak2      mollit anim id est laborum.
       </div>
     </section>
 
@@ -72,7 +72,7 @@
     <section class="litensak">
 
       <div class="bilde4">
-
+<img src="bilder/kas.jpg" alt="">
       </div>
       <div class="tekst">litensak3</div>
     </section>
@@ -82,27 +82,28 @@
     <section class="litensak">
 
       <div class="bilde5">
-
+<img src="bilder/rashi.jpg" alt="">
       </div>
-      <div class="tekst">litensak4</div>
+      <div class="tekst">Stjerna</div>
     </section>
 
 
     <section class="litensak">
 
       <div class="bilde6">
+        <img src="bilder/kebab.jpg" alt="">
       </div>
-      <div class="tekst">litensak5     </div>
+      <div class="tekst">Kebab er godt  </div>
     </section>
 
 
     <section class="storsak">
 
       <div class="bilde7">
+        <img src="bilder/mat.jpg" alt="">
       </div>
 
-      <div class="tekst">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <div class="tekst">ute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
 
     </section>
