--- a/KaranSinMorsommeFerie/Øve_til_prøve/listenav.html
+++ b/KaranSinMorsommeFerie/Øve_til_prøve/listenav.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="nb" dir="ltr">
   <head>
+    <a id="ola" href="https://www.jpsrandhawa.com" target="_blank">Trykk her for å gå inn på en dårlig nettside</a>
+    <br>
     <meta charset="utf-8">
     <title>noe</title>
     <style media="screen">
