--- a/KaranSinMorsommeFerie/Nettside/index.html
+++ b/KaranSinMorsommeFerie/Nettside/index.html
@@ -1,205 +1,296 @@
 <!DOCTYPE html>
 <html lang="nb" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="">
-    <title> kanskje</title>
-    <link rel="stylesheet" href="main.css">
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <h1 class="logo"></h1>
-  <img src="karan.png" alt="logo" title="logo"width="300px">
 
-          <nav>
-            <ul>
-              <li><a href="#">Hjem</a></li>
-              <li><a href="#">om meg</a></li>
-              <li><a href="#">Pris</a></li>
-              <li><a href="#">kontakt meg</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
-<main>
-  <br><br>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="">
+  <title> kanskje</title>
+  <link rel="stylesheet" href="main.css">
+</head>
 
-<a id="ola" href="https://www.jpsrandhawa.com" target="_blank">Trykk her for å gå inn på en dårlig nettside</a>
-<br><br><br><br><br><br>
+<body>
+  <header>
+    <div class="container">
+      <h1 class="logo"></h1>
+      <img src="bilder/karan.png" alt="logo" title="logo"width="300px" class="logo">
 
-<section>
-<div class="g">
-    <div class="tall">1
-
-    </div> H
-  </div>
-  <div class="span-2 usynlig">2</div>
-  <div class="b">
-    <div class="tall">2
-
-    </div>He
-  </div>
-
-  <div class="o">
-    <div class="tall">3
-
+      <nav>
+        <ul>
+          <li><a href="#">Hjem</a></li>
+          <li><a href="#">om meg</a></li>
+          <li><a href="#">Pris</a></li>
+          <li><a href="#">kontakt meg</a></li>
+        </ul>
+      </nav>
     </div>
-    <div class="tall">
+  </header>
+  <main>
 
-    </div>Li
+    <br><br>
+    <a id="ola" href="https://www.jpsrandhawa.com" target="_blank">Trykk her for å gå inn på en dårlig nettside</a>
+    <br>
+
+    <section class="periodiske">
+
+      <div class="g">
+        <div class="tall">1
+
+        </div> H
+      </div>
+      <div class="span-2 usynlig">2</div>
+      <div class="b">
+        <div class="tall">2
+
+        </div>He
+      </div>
+
+      <div class="o">
+        <div class="tall">3
+
+        </div>
+        <div class="tall">
+
+        </div>Li
+      </div>
+
+      <div class="l">
+        <div class="tall">4
+
+        </div>Be
+      </div>
+      <div class="y">
+
+
+        <div class="tall">5
+        </div>B
+      </div>
+      <div class="y">
+        <div class="tall">6
+
+        </div>C
+      </div>
+      <div class="y">
+        <div class="tall">7
+
+        </div>N
+      </div>
+      <div class="y">
+        <div class="tall">8
+
+        </div>O
+      </div>
+      <div class="y">
+        <div class="tall">9
+
+        </div>F
+      </div>
+      <div class="b">
+        <div class="tall">10
+
+        </div>Ne
+      </div>
+      <div class="o">
+        <div class="tall ">11
+
+        </div>Na
+      </div>
+      <div class="l">
+        <div class="tall">12
+
+        </div>Mg
+      </div>
+      <div class="y">
+        <div class="tall">13
+
+        </div>Al
+      </div>
+      <div class="y">
+        <div class="tall">14
+
+        </div>Si
+      </div>
+      <div class="y">
+        <div class="tall">15
+
+        </div>P
+      </div>
+      <div class="y">
+        <div class="tall">16
+
+        </div>S
+      </div>
+      <div class="y">
+        <div class="tall">17
+
+        </div>Cl
+      </div>
+      <div class="b">
+        <div class="tall">18
+
+        </div>Ar
+      </div>
+      <div class="o">
+        <div class="tall ">19
+
+        </div>K
+      </div>
+      <div class="l">
+        <div class="tall">20
+
+        </div>Ca
+      </div>
+      <div class="y">
+        <div class="tall">21
+
+        </div>Sc
+      </div>
+      <div class="y">
+        <div class="tall">22
+
+        </div>Ti
+      </div>
+      <div class="y">
+        <div class="tall">23
+
+
+
+        </div>V
+      </div>
+      <div class="y">
+        <div class="tall">24
+
+        </div>Cr
+      </div>
+      <div class="y">
+        <div class="tall">25
+
+        </div>Mn
+      </div>
+      <div class="b">
+        <div class="tall">26
+
+        </div>Fe
+      </div>
+      <div class="o">
+        <div class="tall ">27
+
+        </div>Co
+      </div>
+      <div class="l">
+        <div class="tall">28
+
+        </div>Ni
+      </div>
+      <div class="y">
+        <div class="tall">29
+
+        </div>Cu
+      </div>
+      <div class="y">
+        <div class="tall">30
+
+        </div>Zn
+      </div>
+      <div class="y">
+        <div class="tall">31
+
+        </div>Ga
+      </div>
+    </section>
+    <br><br><br><br>
+
+
+
+
+
+
+
+    <section class="nyhet">
+
+
+      <section class="middelssak">
+
+        <div class="bilde1">
+          <img src="bilder/slothinspace.jpg" alt="">
+
+  </div>
+        <div class="tekst"><h3>bil vrooom vroom  qui officia deserunt mollit anim id est laborum.</h3>
+        </div>
+      </section>
+
+
+      <section class="litensak">
+        <img src="bilder/matin.jpg" alt="">
+        <div class="bilde2">
+
+        </div>
+        <div class="tekst">litensak1
+          Lorem ipsum dolor sit amet, consectetur adipisicingum.
+        </div>
+      </section>
+
+
+      <section class="litensak">
+
+        <div class="bilde3">
+          <img src="bilder/united.jpg" alt="">
+
+  </div>
+        <div class="tekst">litensak2 mollit anim id est laborum.
+        </div>
+      </section>
+
+
+      <section class="litensak">
+
+        <div class="bilde4">
+          <img src="bilder/bilfyr.jpg" alt="">
+
+  </div>
+        <div class="tekst">litensak3</div>
+      </section>
+
+
+
+      <section class="litensak">
+
+        <div class="bilde5">
+          <img src="bilder/united.jpg" alt="">
+
+  </div>
+        <div class="tekst">Stjerna</div>
+      </section>
+
+
+      <section class="litensak">
+
+        <div class="bilde6">
+          <img src="bilder/karan.png" alt="">
+
+  </div>
+        <div class="tekst">Kebab er godt </div>
+      </section>
+
+
+      <section class="storsak">
+
+        <div class="bilde7">
+          <img src="bilder/bilfyr.jpg" alt="">
+
   </div>
 
-  <div class="l">
-    <div class="tall">4
+        <div class="tekst">ute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
 
-    </div>Be
-  </div>
-  <div class="y">
+      </section>
 
+    </section>
+  </main>
+  <footer>
 
-    <div class="tall">5
-    </div>B
-  </div>
-  <div class="y">
-    <div class="tall">6
+  </footer>
 
-    </div>C
-  </div>
-  <div class="y">
-    <div class="tall">7
-
-    </div>N
-  </div>
-  <div class="y">
-    <div class="tall">8
-
-    </div>O
-  </div>
-  <div class="y">
-    <div class="tall">9
-
-    </div>F
-  </div>
-  <div class="b">
-    <div class="tall">10
-
-    </div>Ne
-  </div>
-  <div class="o">
-    <div class="tall ">11
-
-    </div>Na
-  </div>
-  <div class="l">
-    <div class="tall">12
-
-    </div>Mg
-  </div>
-  <div class="y">
-    <div class="tall">13
-
-    </div>Al
-  </div>
-  <div class="y">
-    <div class="tall">14
-
-    </div>Si
-  </div>
-  <div class="y">
-    <div class="tall">15
-
-    </div>P
-  </div>
-  <div class="y">
-    <div class="tall">16
-
-    </div>S
-  </div>
-  <div class="y">
-    <div class="tall">17
-
-    </div>Cl
-  </div>
-  <div class="b">
-    <div class="tall">18
-
-    </div>Ar
-  </div>
-  <div class="o">
-    <div class="tall ">19
-
-    </div>K
-  </div>
-  <div class="l">
-    <div class="tall">20
-
-    </div>Ca
-  </div>
-  <div class="y">
-    <div class="tall">21
-
-    </div>Sc
-  </div>
-  <div class="y">
-    <div class="tall">22
-
-    </div>Ti
-  </div>
-  <div class="y">
-    <div class="tall">23
-
-
-
-    </div>V
-  </div>
-  <div class="y">
-    <div class="tall">24
-
-    </div>Cr
-  </div>
-  <div class="y">
-    <div class="tall">25
-
-    </div>Mn
-  </div>
-  <div class="b">
-    <div class="tall">26
-
-    </div>Fe
-  </div>
-  <div class="o">
-    <div class="tall ">27
-
-    </div>Co
-  </div>
-  <div class="l">
-    <div class="tall">28
-
-    </div>Ni
-  </div>
-  <div class="y">
-    <div class="tall">29
-
-    </div>Cu
-  </div>
-  <div class="y">
-    <div class="tall">30
-
-    </div>Zn
-  </div>
-  <div class="y">
-    <div class="tall">31
-
-    </div>Ga
-  </div>
-</section>
-
-</main>
-<footer>
-
-</footer>
-
-</main>
+  </main>
 </body>
+
 </html>
