nr 2 egen nettside

--- a/KaranSinMorsommeFerie/Nettside/index.html
+++ b/KaranSinMorsommeFerie/Nettside/index.html
@@ -29,7 +29,6 @@
     <br><br>
     <a id="ola" href="https://www.jpsrandhawa.com" target="_blank">Trykk her for å gå inn på en dårlig nettside</a>
     <br>
-
     <section class="periodiske">
 
       <div class="g">
@@ -197,10 +196,9 @@
         </div>Ga
       </div>
     </section>
-    <br><br><br><br>
 
 
-
+<h1>Nyhet nettside start:</h1>
 
 
 
@@ -244,7 +242,7 @@
       <section class="litensak">
 
         <div class="bilde4">
-          <img src="bilder/bilfyr.jpg" alt="">
+          <img src="bilder/united.jpg" alt="">
 
   </div>
         <div class="tekst">litensak3</div>
@@ -265,7 +263,7 @@
       <section class="litensak">
 
         <div class="bilde6">
-          <img src="bilder/karan.png" alt="">
+          <img src="bilder/matin.jpg" alt="">
 
   </div>
         <div class="tekst">Kebab er godt </div>
