--- a/KaranSinMorsommeFerie/Nettside/nettavis/minavis.html
+++ b/KaranSinMorsommeFerie/Nettside/nettavis/minavis.html
@@ -4,26 +4,26 @@
 <head>
   <meta charset="utf-8">
   <title>Nettavis</title>
-  <link rel="stylesheet" href="hoved.css">
+  <link rel="stylesheet" href="avis.css">
 </head>
 
 <body>
   <header>
     <section>
 
- <a href="index.html"><img src="bilder/kas.jpg" alt="logo" class="logo"></a>
+ <a href="../index.html"><img src="../bilder/karan.png" alt="logo" class="logo"></a>
 
 
     </section>
 
     <section class="lenke">
-      <a href="live.html">LIVE</a>
+      <a href="#">LIVE</a>
     </section>
     <section class="lenke">
       <a href="sport.html">SPORT</a>
     </section>
     <section class="lenke">
-      <a href="politikk.html">POLITIKK</a>
+      <a href="#">POLITIKK</a>
     </section>
     <section class="lenke">
       <a href="TVguide.html">TV-GUIDE</a>
@@ -37,34 +37,35 @@
   </header>
 
   <main>
-
     <section class="middelssak">
 
       <div class="bilde1">
-<img src="bilder/abc.png" alt="">
-      </div>
+        <img src="../bilder/slothinspace.jpg" alt="">
+
+</div>
       <div class="tekst"><h3>bil vrooom vroom  qui officia deserunt mollit anim id est laborum.</h3>
       </div>
     </section>
 
 
     <section class="litensak">
-<img src="bilder/b.jpg" alt="">
+      <img src="../bilder/matin.jpg" alt="">
       <div class="bilde2">
 
       </div>
       <div class="tekst">litensak1
-          Lorem ipsum dolor sit amet, consectetur adipisicingum.
-        </div>
+        Lorem ipsum dolor sit amet, consectetur adipisicingum.
+      </div>
     </section>
 
 
     <section class="litensak">
 
       <div class="bilde3">
-<img src="bilder/bøø.jpg" alt="">
-      </div>
-      <div class="tekst">litensak2      mollit anim id est laborum.
+        <img src="../bilder/united.jpg" alt="">
+
+</div>
+      <div class="tekst">litensak2 mollit anim id est laborum.
       </div>
     </section>
 
@@ -72,8 +73,9 @@
     <section class="litensak">
 
       <div class="bilde4">
-<img src="bilder/kas.jpg" alt="">
-      </div>
+        <img src="../bilder/united.jpg" alt="">
+
+</div>
       <div class="tekst">litensak3</div>
     </section>
 
@@ -82,8 +84,9 @@
     <section class="litensak">
 
       <div class="bilde5">
-<img src="bilder/rashi.jpg" alt="">
-      </div>
+        <img src="../bilder/united.jpg" alt="">
+
+</div>
       <div class="tekst">Stjerna</div>
     </section>
 
@@ -91,17 +94,19 @@
     <section class="litensak">
 
       <div class="bilde6">
-        <img src="bilder/kebab.jpg" alt="">
-      </div>
-      <div class="tekst">Kebab er godt  </div>
+        <img src="../bilder/matin.jpg" alt="">
+
+</div>
+      <div class="tekst">Kebab er godt </div>
     </section>
 
 
     <section class="storsak">
 
       <div class="bilde7">
-        <img src="bilder/mat.jpg" alt="">
-      </div>
+        <img src="../bilder/bilfyr.jpg" alt="">
+
+</div>
 
       <div class="tekst">ute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
