--- a/KaranSinMorsommeFerie/Nettside/index.html
+++ b/KaranSinMorsommeFerie/Nettside/index.html
@@ -12,14 +12,14 @@
   <header>
     <div class="container">
       <h1 class="logo"></h1>
-      <img src="bilder/karan.png" alt="logo" title="logo"width="300px" class="logo">
-
+      <a href="index.html"> <img src="bilder/karan.png" alt="logo" title="logo" width="300px" class="logo">
+      </a>
       <nav>
         <ul>
-          <li><a href="#">Hjem</a></li>
-          <li><a href="#">om meg</a></li>
-          <li><a href="#">Pris</a></li>
-          <li><a href="#">kontakt meg</a></li>
+          <li><a href="../Uke_44/nettavis/index.html">nettavis</a></li>
+          <li><a href="../Uke_38/planeter/oppgave_grid.html">solsystem</a></li>
+          <li><a href="../Uke_42/index.html">nett</a></li>
+          <li><a href="om meg/meg.html">om meg</a></li>
         </ul>
       </nav>
     </div>
@@ -198,7 +198,7 @@
     </section>
 
 
-<h1>Nyhet nettside start:</h1>
+    <h1>Nyhet nettside start:</h1>
 
 
 
@@ -211,8 +211,9 @@
         <div class="bilde1">
           <img src="bilder/slothinspace.jpg" alt="">
 
-  </div>
-        <div class="tekst"><h3>bil vrooom vroom  qui officia deserunt mollit anim id est laborum.</h3>
+        </div>
+        <div class="tekst">
+          <h3>bil vrooom vroom qui officia deserunt mollit anim id est laborum.</h3>
         </div>
       </section>
 
@@ -233,7 +234,7 @@
         <div class="bilde3">
           <img src="bilder/united.jpg" alt="">
 
-  </div>
+        </div>
         <div class="tekst">litensak2 mollit anim id est laborum.
         </div>
       </section>
@@ -244,7 +245,7 @@
         <div class="bilde4">
           <img src="bilder/united.jpg" alt="">
 
-  </div>
+        </div>
         <div class="tekst">litensak3</div>
       </section>
 
@@ -255,7 +256,7 @@
         <div class="bilde5">
           <img src="bilder/united.jpg" alt="">
 
-  </div>
+        </div>
         <div class="tekst">Stjerna</div>
       </section>
 
@@ -265,7 +266,7 @@
         <div class="bilde6">
           <img src="bilder/matin.jpg" alt="">
 
-  </div>
+        </div>
         <div class="tekst">Kebab er godt </div>
       </section>
 
@@ -275,7 +276,7 @@
         <div class="bilde7">
           <img src="bilder/bilfyr.jpg" alt="">
 
-  </div>
+        </div>
 
         <div class="tekst">ute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
