--- a/KaranSinMorsommeFerie/Nettside/index.html
+++ b/KaranSinMorsommeFerie/Nettside/index.html
@@ -16,10 +16,10 @@
       </a>
       <nav>
         <ul>
-          <li><a href="../Uke_44/nettavis/index.html">nettavis</a></li>
-          <li><a href="../Uke_38/planeter/oppgave_grid.html">solsystem</a></li>
-          <li><a href="../Uke_42/index.html">nett</a></li>
-          <li><a href="om meg/meg.html">om meg</a></li>
+          <li><a href="../Uke_44/nettavis/index.html" target="_blank">nettavis</a></li>
+          <li><a href="../Uke_38/planeter/oppgave_grid.html"target="_blank">solsystem</a></li>
+          <li><a href="../Uke_42/index.html"target="_blank">nett</a></li>
+          <li><a href="om meg/meg.html"target="_blank">om meg</a></li>
         </ul>
       </nav>
     </div>
