--- a/KaranSinMorsommeFerie/Nettside/index.html
+++ b/KaranSinMorsommeFerie/Nettside/index.html
@@ -25,10 +25,8 @@
     </div>
   </header>
   <main>
-
-    <br><br>
-    <a id="ola" href="https://www.jpsrandhawa.com" target="_blank">Trykk her for å gå inn på en dårlig nettside</a>
-    <br>
+<br>
+<h1>Det periodiske system</h1>
     <section class="periodiske">
 
       <div class="g">
