--- a/KaranSinMorsommeFerie/Uke_38/planeter/oppgave_grid.html
+++ b/KaranSinMorsommeFerie/Uke_38/planeter/oppgave_grid.html
@@ -128,7 +128,7 @@
     <article>uranus<img src="uranus.jpg"></article>
     <article>Saturn<img src="sat2.jpg"></article>
     <article>Venus<img src="venus.jpg"></article>
-    <article>Neptun<img src="Neptun.jpg"></article>
+    <article>Neptun<img src="neptun.jpg"></article>
 
 
     <br>
