--- a/KaranSinMorsommeFerie/Uke_44/nettavis/index.html
+++ b/KaranSinMorsommeFerie/Uke_44/nettavis/index.html
@@ -72,7 +72,7 @@
     <section class="litensak">
 
       <div class="bilde4">
-<img src="bilder/kas.jpg" alt="">
+<img src="bilder/ern.jpg" alt="">
       </div>
       <div class="tekst">litensak3</div>
     </section>
@@ -91,7 +91,7 @@
     <section class="litensak">
 
       <div class="bilde6">
-        <img src="bilder/kebab.jpg" alt="">
+        <img src="bilder/fiona.jpg" alt="">
       </div>
       <div class="tekst">Kebab er godt  </div>
     </section>
