Koding fra timen. Trenger litt hjelp neste time med å få hele logg inn og ønskeliste knappene til å blir linker. 12.11.2018 Karan

--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
@@ -10,62 +10,107 @@
 <body>
   <header>
     <section class="lang">
-<a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
+      <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
     </section>
+
+
 
     <section class="lenke damherbar">
-      <a href="#">DAME | </a>
-      <a href="#">  HERRE </a>
-      <a href="#">| BARN</a>
+      <a href="../Dame.html">DAME </a>
+      |
+      <a href="../herre.html"> HERRE </a>
+      |
+      <a href="../Barn.html"> BARN</a>
     </section>
+
+
+
     <section class="usynlig1">
-
     </section>
+
+
+
     <section>
-
-      <a href="index.html"><img src="../bilder/IKEA.png" alt="logo" class="logo"></a>
-
+      <a href="index.html"><img src="../bilder/logo.psd" alt="logo" class="logo"></a>
     </section>
+
+
+
     <section class="usynlig">
+    </section>
 
+
+
+    <section class="lenke logginn">
+
+      <a href="#">
+        <thead>
+
+          <a href="#"></a>
+          <tr>
+            <th><a href="../header/logginn.html"><img src="../bilder/logg inn.png" alt="" class="logginnbilde"> </a>
+            </th>
+      </a></tr>
+      </thead>
+      <tbody>
+        <a href="#">
+          <tr>
+            <td> <a href="../header/logginn.html"><br>LOGG INN</a></td>
+          </tr>
+        </a>
     </section>
+
+
+
+
     <section class="lenke logginn">
       <thead>
         <tr>
-          <th><a href="log inn"><img src="../bilder/logg inn.png" alt="" class="logginnbilde"> </a>
-    </th>
+          <th><a href="../header/ønskeliste.html"><img src="../bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
+          </th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td> <a href="#"><br>LOGG INN</a></td>
-          </tr>
-    </section>
-    <section class="lenke logginn">
-      <thead>
-        <tr>
-          <th><a href="log inn"><img src="../bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
-    </th>
+          <td> <a href="../header/ønskeliste.html">ØNSKELISTE</a></td>
         </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>   <a href="#">ØNSKELISTE</a></td>
-          </tr>
+        </tr>
 
     </section>
   </header>
-  <nav class="navbar">
 
-  </nav>
   <main>
-    <section class="grid4">
+    <section>
+      <nav class="navigation">
+        <section class="klesvalg">
+          <a href="../Dame.html">Nyheter </a>
 
-    </section>
+          <a href="../herre.html">klær </a>
 
+          <a href="../Barn.html"> Sko </a>
+
+          <a href="../Dame.html"> sport </a>
+
+          <a href="../herre.html"> accesories </a>
+
+          <a href="../Barn.html"> Salg </a>
+        </section>
+
+        <section class="denusynlig">
+
+        </section>
+        <section class="søkemotor">
+          <input type="text" placeholder="Søk..">
+          <button type="submit">søk</button>
+        </section>
+
+
+      </nav>
 
 
   </main>
+
+
 
 
 
