--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
@@ -41,42 +41,26 @@
 
 
 
-    <section class="lenke logginn">
+<div class="lenke logginn">
 
-      <a href="#">
-        <thead>
 
-          <a href="#"></a>
-          <tr>
-            <th><a href="../header/logginn.html"><img src="../bilder/logg inn.png" alt="" class="logginnbilde"> </a>
-            </th>
-      </a></tr>
-      </thead>
-      <tbody>
-        <a href="#">
-          <tr>
-            <td> <a href="../header/logginn.html"><br>LOGG INN</a></td>
-          </tr>
-        </a>
-    </section>
+<a href="../header/logginn.html"><img src="../bilder/logg inn.png" alt="" class="logginnbilde"> </a>
+
+           <a href="../header/logginn.html"><br>LOGG INN</a>
+
+</div>
 
 
 
 
-    <section class="lenke logginn">
-      <thead>
-        <tr>
-          <th><a href="../header/ønskeliste.html"><img src="../bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td> <a href="../header/ønskeliste.html">ØNSKELISTE</a></td>
-        </tr>
-        </tr>
 
-    </section>
+    <div class="lenke logginn">
+
+      <a href="../header/ønskeliste.html"><img src="../bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
+
+    <a href="../header/ønskeliste.html">ØNSKELISTE</a>
+
+  </div>
   </header>
 
   <main>
@@ -104,8 +88,10 @@
           <button type="submit">søk</button>
         </section>
 
-
       </nav>
+<section class="Hoved grid">
+
+</section>
 
 
   </main>
