--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
@@ -41,14 +41,14 @@
 
 
 
-<div class="lenke logginn">
+    <div class="lenke logginn">
 
 
-<a href="../header/logginn.html"><img src="../bilder/logg inn.png" alt="" class="logginnbilde"> </a>
+      <a href="../header/logginn.html"><img src="../bilder/logg inn.png" alt="" class="logginnbilde"> </a>
 
-           <a href="../header/logginn.html"><br>LOGG INN</a>
+      <a href="../header/logginn.html"><br>LOGG INN</a>
 
-</div>
+    </div>
 
 
 
@@ -58,9 +58,9 @@
 
       <a href="../header/ønskeliste.html"><img src="../bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
 
-    <a href="../header/ønskeliste.html">ØNSKELISTE</a>
+      <a href="../header/ønskeliste.html">ØNSKELISTE</a>
 
-  </div>
+    </div>
   </header>
 
   <main>
@@ -89,11 +89,53 @@
         </section>
 
       </nav>
-<section class="Hoved grid">
+
+
+
+      <section class="reklame1">
+        <div class="bilde1">
+          <img src="../bilder/united.jpg" alt="">
+        </div>
+      
+      </section>
+
+
+
+
+
+<section class="Hoved_grid">
+      <section class="nr1">
+
+        <div class="bilde2">
+          <img src="../bilder/" alt="">
+        </div>
+        <div class="tekst"> DAME</div>
+        <div class="undertekst">k2 </div>
+
+      </section>
+
+
+      <section class="nr2">
+
+        <div class="bilde3">
+          <img src="../bilder/" alt="">
+        </div>
+        <div class="tekst">HERRE </div>
+        <div class="undertekst"> c2</div>
+      </section>
+
+      <section class=" nr3">
+
+        <div class="bilde4">
+          <img src="../bilder/" alt="">
+        </div>
+        <div class="tekst">BARN </div>
+        <div class="undertekst"> b2</div>
+      </section>
+
+
 
 </section>
-
-
   </main>
 
 
