--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
@@ -18,7 +18,7 @@
     <section class="lenke damherbar">
       <a href="../Dame.html">DAME </a>
       |
-      <a href="../herre.html"> HERRE </a>
+      <a href="../a HERRE/herre.html"> HERRE </a>
       |
       <a href="../Barn.html"> BARN</a>
     </section>
@@ -58,84 +58,173 @@
 
       <a href="../header/ønskeliste.html"><img src="../bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
 
-      <a href="../header/ønskeliste.html">ØNSKELISTE</a>
+      <a href="../header/ønskeliste.html">LISTE</a>
 
     </div>
-  </header>
 
-  <main>
-    <section>
-      <nav class="navigation">
-        <section class="klesvalg">
-          <a href="../Dame.html">Nyheter </a>
+</header>
 
-          <a href="../herre.html">klær </a>
+<main>
 
-          <a href="../Barn.html"> Sko </a>
+    <nav class="navigation">
+      <section class="klesvalg">
+        <a href="../Dame.html">Nyheter </a>
 
-          <a href="../Dame.html"> sport </a>
+        <a href="../herre.html">klær </a>
 
-          <a href="../herre.html"> accesories </a>
+        <a href="../Barn.html"> Sko </a>
 
-          <a href="../Barn.html"> Salg </a>
-        </section>
+        <a href="../Dame.html"> sport </a>
 
-        <section class="denusynlig">
+        <a href="../herre.html"> accesories </a>
 
-        </section>
-        <section class="søkemotor">
-          <input type="text" placeholder="Søk..">
-          <button type="submit">søk</button>
-        </section>
-
-      </nav>
-
-
-
-      <section class="reklame1">
-        <div class="bilde1">
-          <img src="../bilder/united.jpg" alt="">
-        </div>
-      
+        <a href="../Barn.html"> Salg </a>
       </section>
 
+      <section class="denusynlig">
+
+      </section>
+      <section class="søkemotor">
+        <input type="text" placeholder="Søk..">
+        <button type="submit">søk</button>
+      </section>
+
+    </nav>
 
 
 
 
-<section class="Hoved_grid">
+
+
+
+
+
+
+    <section class="reklame1">
+
+    </section>
+
+
+
+
+
+
+    <section class="Hoved_grid">
+
+
+
       <section class="nr1">
-
-        <div class="bilde2">
-          <img src="../bilder/" alt="">
-        </div>
-        <div class="tekst"> DAME</div>
-        <div class="undertekst">k2 </div>
-
+        <a href="../DAMER/Dame.html"><img src="../bilder/dammod.psd" alt="k" class="bilde2"></a>
       </section>
 
 
-      <section class="nr2">
 
-        <div class="bilde3">
-          <img src="../bilder/" alt="">
-        </div>
-        <div class="tekst">HERRE </div>
-        <div class="undertekst"> c2</div>
+      <section class=" nr2">
+        <a href="../a HERRE/herre.html"></a>
+        <a href="../a Herre/herre.html"><img src="../bilder/manmod.psd" alt="" class="bilde3"></a>
       </section>
+
+
 
       <section class=" nr3">
+        <a href="../BARN/Barn.html"> <img src="../bilder/barmod.psd" alt="" class="bilde4"></a>
+      </section>
 
-        <div class="bilde4">
-          <img src="../bilder/" alt="">
+
+    </section>
+
+    <h1>HERRE</h1>
+    <h2>Nyheter:</h2>
+
+    <section class="nyheter_hoved">
+
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
         </div>
-        <div class="tekst">BARN </div>
-        <div class="undertekst"> b2</div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet.jpg" alt=""> </div>
+        <div class="Merke">Supreme</div>
+        <div class="navn">GLACIER JACKET
+        </div>
+        <div class="pris">2 995 kr</div>
+      </section>
+
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="../bilder/lauren_it.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren</div>
+        <div class="navn">HI TECH Fleecejakke</div>
+        <div class="pris">1 499 kr</div>
+      </section>
+
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="../bilder/it dress.jpg" alt=""> </div>
+        <div class="Merke">Versace</div>
+        <div class="navn">VERSACE SUIT - Dress</div>
+        <div class="pris">29 899 kr</div>
       </section>
 
 
 
-</section>
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet.jpg" alt=""> </div>
+        <div class="Merke">Supreme</div>
+        <div class="navn">GLACIER JACKET
+        </div>
+        <div class="pris">2 995 kr</div>
+      </section>
+
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="../bilder/lauren_it.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren</div>
+        <div class="navn">HI TECH Fleecejakke</div>
+        <div class="pris">1 499 kr</div>
+      </section>
+
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="../bilder/it dress.jpg" alt=""> </div>
+        <div class="Merke">Versace</div>
+        <div class="navn">VERSACE SUIT - Dress</div>
+        <div class="pris">29 899 kr</div>
+      </section>
+
+
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999   </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+
+
+    </section>
+
+
+
+
+
+
   </main>
 
 
@@ -145,6 +234,118 @@
 
   <footer>
 
+        <section class="reklame2">
+
+        </section>
+
+
+    <section class="hele_footer">
+
+
+      <section class="om_oss_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>INFORMASJON:</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="../logg inn og liste/logginn.html"> LOGG INN</a></td>
+            </tr>
+            <tr>
+              <td><a href="../logg inn og liste/ønskeliste.html">ØNSKELISTE</a></td>
+            </tr>
+            <tr>
+              <td>KONTAKT OSS</td>
+            </tr>
+            <tr>
+              <td>BLI MEDLEM</td>
+            </tr>
+          </tbody>
+
+        </table>
+      </section>
+
+      <section class="Herre_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>HERRE:</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td> <a href="index.html">FORSIDE</a>
+              </td>
+            </tr>
+            <tr>
+              <td>NYHETER</td>
+            </tr>
+            <tr>
+              <td>SALG</td>
+            </tr>
+            <tr>
+              <td>SKO</td>
+            </tr>
+          </tbody>
+
+        </table>
+
+      </section>
+
+      <section class="Dame_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>DAMER:</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="index.html">FORSIDE</a></td>
+            </tr>
+            <tr>
+              <td>NYHETER</td>
+            </tr>
+            <tr>
+              <td>SALG</td>
+            </tr>
+            <tr>
+              <td>SKO</td>
+            </tr>
+          </tbody>
+
+        </table>
+        <tr>
+
+      </section>
+
+      <section class="Barn_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>BARN:</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="index.html">FORSIDE</a></td>
+            </tr>
+            <tr>
+              <td>NYHETER</td>
+            </tr>
+            <tr>
+              <td>SALG</td>
+            </tr>
+            <tr>
+              <td>SKO</td>
+            </tr>
+          </tbody>
+
+        </table>
+      </section>
+    </section>
   </footer>
 
 
