--- a/KaranSinMorsommeFerie/Uke_44/nettavis/index.html
+++ b/KaranSinMorsommeFerie/Uke_44/nettavis/index.html
@@ -103,7 +103,7 @@
         <img src="bilder/mat.jpg" alt="">
       </div>
 
-      <div class="tekst">ute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <div class="tekst">ute rure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
 
     </section>
