--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a HERRE/herre.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a HERRE/herre.html
@@ -31,7 +31,7 @@
 
 
     <section>
-      <a href="index.html"><img src="../bilder/logo.psd" alt="logo" class="logo"></a>
+      <a href="../a INDEX/index.html"><img src="../bilder/logo.psd" alt="logo" class="logo"></a>
     </section>
 
 
@@ -89,10 +89,49 @@
       </section>
 
     </nav>
-</main>
-<footer>
 
-</footer>
+    <section class="herre_hoved">
+
+
+      <section class="tabell_side">
+
+      </section>
+
+      <section class="grid_herre">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+
+      <section class="grid_herre">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+
+      <section class="grid_herre">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+    </section>
+
+
+
+
+  </main>
+  <footer>
+
+  </footer>
 
 
 </html>
