--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
@@ -62,23 +62,74 @@
 
     </div>
 
-</header>
+  </header>
 
-<main>
+  <main>
 
     <nav class="navigation">
+
+
       <section class="klesvalg">
-        <a href="../Dame.html">Nyheter </a>
 
-        <a href="../herre.html">klær </a>
 
-        <a href="../Barn.html"> Sko </a>
 
-        <a href="../Dame.html"> sport </a>
 
-        <a href="../herre.html"> accesories </a>
+        <div class="dropned"><a href="../herre.html">klær </a>
+          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </div>
+        </div>
 
-        <a href="../Barn.html"> Salg </a>
+
+
+        <div class="dropned"><a href="../herre.html">Sko </a>
+          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </div>
+        </div>
+
+
+
+        <div class="dropned"><a href="../herre.html">sport </a>
+          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </div>
+        </div>
+
+
+
+        <div class="dropned"><a href="../herre.html">accesories </a>
+          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </div>
+        </div>
+
+
+        <div class="dropned"><a href="../herre.html">Salg </a>
+          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </div>
+        </div>
       </section>
 
       <section class="denusynlig">
@@ -90,12 +141,6 @@
       </section>
 
     </nav>
-
-
-
-
-
-
 
 
 
@@ -213,7 +258,7 @@
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">BEAR - Strikkegenser
         </div>
-        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999   </mark> <mark class="nåpris">25%</mark> </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
       </section>
 
 
@@ -234,9 +279,9 @@
 
   <footer>
 
-        <section class="reklame2">
+    <section class="reklame2">
 
-        </section>
+    </section>
 
 
     <section class="hele_footer">
@@ -246,7 +291,7 @@
         <table>
           <thead>
             <tr>
-              <th>INFORMASJON:</th>
+              <th>INFORMASJON</th>
             </tr>
           </thead>
           <tbody>
@@ -271,7 +316,7 @@
         <table>
           <thead>
             <tr>
-              <th>HERRE:</th>
+              <th>HERRE</th>
             </tr>
           </thead>
           <tbody>
@@ -298,7 +343,7 @@
         <table>
           <thead>
             <tr>
-              <th>DAMER:</th>
+              <th>DAMER</th>
             </tr>
           </thead>
           <tbody>
@@ -325,7 +370,7 @@
         <table>
           <thead>
             <tr>
-              <th>BARN:</th>
+              <th>BARN</th>
             </tr>
           </thead>
           <tbody>
@@ -345,7 +390,31 @@
 
         </table>
       </section>
+
+
+
+    <section class="sosial_footer">
+      <table>
+        <thead>
+          <tr>
+            <th>Følg oss</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><a href="http://www.singhsandhu.com"><img src="../bilder/face.png" class="sosbilder"></a></td>
+            <td><a href="http://www.singhsandhu.com"><img src="../bilder/twit.png" class="sosbilder"></a></td>
+            <td><a href="http://www.singhsandhu.com"><img src="../bilder/insta.jpg" class="sosbilder"></a></td>
+          </tr>
+
+        </tbody>
+
+      </table>
     </section>
+
+
+
+      </section>
   </footer>
 
 
